add_subdirectory(benchmarks)
add_subdirectory(core)
add_subdirectory(engine)
add_subdirectory(format)
add_subdirectory(fuzztests)
add_subdirectory(graphics)
add_subdirectory(math)
add_subdirectory(network)
add_subdirectory(platform)
add_subdirectory(render)
add_subdirectory(stem)
add_subdirectory(ui)
add_subdirectory(unittests)
add_subdirectory(vm)
