if(LAPLACE_ENABLE_MATH)
  add_subdirectory(math)
endif()
if(LAPLACE_ENABLE_NETWORK)
  add_subdirectory(network)
endif()
if(LAPLACE_ENABLE_UI)
  add_subdirectory(ui)
endif()
if(LAPLACE_ENABLE_CORE)
  add_subdirectory(core)
endif()
if(LAPLACE_ENABLE_PLATFORM)
  add_subdirectory(platform)
endif()
if(LAPLACE_ENABLE_ENGINE)
  add_subdirectory(engine)
endif()
if(LAPLACE_ENABLE_GRAPHICS)
  add_subdirectory(graphics)
endif()
if(LAPLACE_ENABLE_RENDER)
  add_subdirectory(render)
endif()
if(LAPLACE_ENABLE_STEM)
  add_subdirectory(stem)
endif()
if(LAPLACE_ENABLE_FORMAT)
  add_subdirectory(format)
endif()
if(LAPLACE_ENABLE_COROUTINE)
  add_subdirectory(coroutine)
endif()
add_subdirectory(.generated)
